[package]
name = "ads1263"
version = "0.1.6"
edition = "2021"
description = "ADS1263 device driver for Rust using embedded_hal traits"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = {version = "0.2.7", features = ["unproven"]}
